dataset1235/2025-2/1153765216/users/4118477972/executions/2747719322_775838323.log
== RUN (2025-08-19 19:04:21)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
m = (n1 + n2 +n3/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 4
    m = (n1 + n2 +n3/3
        ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 4
    m = (n1 + n2 +n3/3
        ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:35:47)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
m = (n1 + n2 + n3)/3
print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:04:19)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
m = (n1 + n2 +n3/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 4
    m = (n1 + n2 +n3/3
        ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 4
    m = (n1 + n2 +n3/3
        ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:03:58)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
m = n1 + n2 +n3/3
print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:04:40)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
m = (n1 + n2 +n3/3)
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:04:38)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
m = (n1 + n2 +n3/3)
print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:04:00)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
m = n1 + n2 +n3/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:05:13)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
m = (n1 + n2 + n3)/3
print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
